Add cabecera y menu en index.html y style.css

--- a/index.html
+++ b/index.html
@@ -4,18 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/e5cd8d0512.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Grid-Ecommerce</title>
 </head>
 <body>
     <div class="grid_area">
         <div class="navbar">
-            <p>1</p>
+            <div class="conteiner_menu">
+                <div class="conteiner_menu_texto">
+                    <p>1</p>
+                </div>
+                <div class="conteiner_menu_icono">
+                    <i class="fa-regular fa-message"></i>
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+            </div>    
         </div>
         <div class="asidebar">
-            <p>2</p>
+        <div class="conteiner_asidebar">
+            <div class="conteiner_asideba_titulo">
+                <h1>Categoría</h1>
+            </div>
+            <div class="conteiner_asideba_categoria">
+                <p>Consola(4)</p>
+            </div>
+            <div class="conteiner_asideba_categoria">
+                <p>Juegos(100)</p>
+            </div>
+            <div class="conteiner_asideba_categoria">
+                <p>Accesorios(15)</p>
+            </div>
         </div>
-        <div class="gridproducto">
+           
+        </div>
+        <div class="gridmain">
             <p>3</p>
         </div>
         <div class="footer">
