Modificacion Grid Producto

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="navbar">
             <div class="conteiner_menu">
                 <div class="conteiner_menu_texto">
-                    <p>1</p>
+                    <h1>PlayShop</h1>
                 </div>
                 <div class="conteiner_menu_icono">
                     <i class="fa-regular fa-message"></i>
@@ -27,7 +27,7 @@
         <div class="asidebar">
         <div class="conteiner_asidebar">
             <div class="conteiner_asideba_titulo">
-                <h1>Categoría</h1>
+                <h2>Categoría</h2>
             </div>
             <div class="conteiner_asideba_categoria">
                 <p>Consola(4)</p>
@@ -41,11 +41,49 @@
         </div>
            
         </div>
-        <div class="gridmain">
-            <p>3</p>
-        </div>
+        <section class="gridmain">
+            <div class="gridmain_item_card">
+                <img class="gridmain_item_card_img" src="./assets/img/xboxx.jpeg" alt="Xbox X"/>
+                <p class="gridmain_item_card_texto_producto">Xbox serie X</p> 
+                <p class="gridmain_item_card_texto_precio">$500.000</p>
+                <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
+            </div>
+            <div class="gridmain_item_card">
+                <img class="gridmain_item_card_img" src="./assets/img/xboxs.jpeg" alt="Xbox X"/>
+                <p class="gridmain_item_card_texto_producto">Xbox serie X</p> 
+                <p class="gridmain_item_card_texto_precio">$500.000</p>
+                <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
+            </div>
+            <div class="gridmain_item_card">
+                <img class="gridmain_item_card_img" src="./assets/img/xboxx.jpeg" alt="Xbox X"/>
+                <p class="gridmain_item_card_texto_producto">Xbox serie X</p> 
+                <p class="gridmain_item_card_texto_precio">$500.000</p>
+                <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
+            </div>
+            <div class="gridmain_item_card">
+                <img class="gridmain_item_card_img" src="./assets/img/xboxx.jpeg" alt="Xbox X"/>
+                <p class="gridmain_item_card_texto_producto">Xbox serie X</p> 
+                <p class="gridmain_item_card_texto_precio">$500.000</p>
+                <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
+            </div>
+            <div class="gridmain_item_card">
+                <img class="gridmain_item_card_img" src="./assets/img/xboxx.jpeg" alt="Xbox X"/>
+                <p class="gridmain_item_card_texto_producto">Xbox serie X</p> 
+                <p class="gridmain_item_card_texto_precio">$500.000</p>
+                <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
+            </div>
+            <div class="gridmain_item_card">
+                <img class="gridmain_item_card_img" src="./assets/img/xboxx.jpeg" alt="Xbox X"/>
+                <p class="gridmain_item_card_texto_producto">Xbox serie X</p> 
+                <p class="gridmain_item_card_texto_precio">$500.000</p>
+                <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
+            </div>
+
+        </section>
+
+
         <div class="footer">
-            <p>4</p>
+            <p>Todos los derechos reservados PlayShop@2023</p>
         </div>
 
     </div>
