Optimizacion resolucion de revision

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <div class="conteiner_menu_texto">
                     <h1>PlayShop</h1>
                 </div>
-                <div class="conteiner_menu_icono">
-                    <i class="fa-regular fa-message"></i>
-                    <i class="fa-solid fa-bars"></i>
+                <div class="conteiner_menu_icono">                
+                    <i class="fa-solid fa-truck-fast"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
                 </div>
             </div>    
         </div>
@@ -30,13 +30,13 @@
                 <h2>Categoría</h2>
             </div>
             <div class="conteiner_asideba_categoria">
-                <p>Consola(4)</p>
+                <p>Consola <b class="conteiner_asideba_categoria_b">(6)</b></p>
             </div>
             <div class="conteiner_asideba_categoria">
-                <p>Juegos(100)</p>
+                <p>Juegos<b class="conteiner_asideba_categoria_b">(100)</b></p>
             </div>
             <div class="conteiner_asideba_categoria">
-                <p>Accesorios(15)</p>
+                <p>Accesorios<b class="conteiner_asideba_categoria_b">(15)</b> </p>
             </div>
         </div>
            
@@ -49,33 +49,33 @@
                 <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
             </div>
             <div class="gridmain_item_card">
-                <img class="gridmain_item_card_img" src="./assets/img/xboxs.jpeg" alt="Xbox X"/>
-                <p class="gridmain_item_card_texto_producto">Xbox serie X</p> 
-                <p class="gridmain_item_card_texto_precio">$500.000</p>
+                <img class="gridmain_item_card_img" src="./assets/img/xboxs.jpeg" alt="Xbox S"/>
+                <p class="gridmain_item_card_texto_producto">Xbox serie S</p> 
+                <p class="gridmain_item_card_texto_precio">$300.000</p>
                 <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
             </div>
             <div class="gridmain_item_card">
-                <img class="gridmain_item_card_img" src="./assets/img/xboxx.jpeg" alt="Xbox X"/>
-                <p class="gridmain_item_card_texto_producto">Xbox serie X</p> 
-                <p class="gridmain_item_card_texto_precio">$500.000</p>
+                <img class="gridmain_item_card_img" src="./assets/img/play5.jpeg" alt="Play5"/>
+                <p class="gridmain_item_card_texto_producto">Play Station 5</p> 
+                <p class="gridmain_item_card_texto_precio">$600.000</p>
                 <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
             </div>
             <div class="gridmain_item_card">
-                <img class="gridmain_item_card_img" src="./assets/img/xboxx.jpeg" alt="Xbox X"/>
-                <p class="gridmain_item_card_texto_producto">Xbox serie X</p> 
-                <p class="gridmain_item_card_texto_precio">$500.000</p>
+                <img class="gridmain_item_card_img" src="./assets/img/switch.jpeg" alt="swith/>
+                <p class="gridmain_item_card_texto_producto">Nintendo Swith</p> 
+                <p class="gridmain_item_card_texto_precio">$400.000</p>
                 <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
             </div>
             <div class="gridmain_item_card">
-                <img class="gridmain_item_card_img" src="./assets/img/xboxx.jpeg" alt="Xbox X"/>
-                <p class="gridmain_item_card_texto_producto">Xbox serie X</p> 
-                <p class="gridmain_item_card_texto_precio">$500.000</p>
+                <img class="gridmain_item_card_img" src="./assets/img/nintendo.jpeg" alt="nintendo"/>
+                <p class="gridmain_item_card_texto_producto">Super Nintendo</p> 
+                <p class="gridmain_item_card_texto_precio">$200.000</p>
                 <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
             </div>
             <div class="gridmain_item_card">
-                <img class="gridmain_item_card_img" src="./assets/img/xboxx.jpeg" alt="Xbox X"/>
-                <p class="gridmain_item_card_texto_producto">Xbox serie X</p> 
-                <p class="gridmain_item_card_texto_precio">$500.000</p>
+                <img class="gridmain_item_card_img" src="./assets/img/gameboy.jpeg" alt="gameboy"/>
+                <p class="gridmain_item_card_texto_producto">Game Boy</p> 
+                <p class="gridmain_item_card_texto_precio">$200.000</p>
                 <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
             </div>
 
