--- a/index.html
+++ b/index.html
@@ -8,38 +8,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Grid-Ecommerce</title>
 </head>
 <body>
     <div class="grid_area">
-        <div class="navbar">
-            <div class="conteiner_menu">
-                <div class="conteiner_menu_texto">
-                    <h1>PlayShop</h1>
-                </div>
-                <div class="conteiner_menu_icono">                
-                    <i class="fa-solid fa-truck-fast"></i>
-                    <i class="fa-solid fa-cart-shopping"></i>
-                </div>
-            </div>    
-        </div>
         <div class="asidebar">
-        <div class="conteiner_asidebar">
-            <div class="conteiner_asideba_titulo">
-                <h2>Categoría</h2>
-            </div>
-            <div class="conteiner_asideba_categoria">
-                <p>Consola <b class="conteiner_asideba_categoria_b">(6)</b></p>
-            </div>
-            <div class="conteiner_asideba_categoria">
-                <p>Juegos<b class="conteiner_asideba_categoria_b">(100)</b></p>
-            </div>
-            <div class="conteiner_asideba_categoria">
-                <p>Accesorios<b class="conteiner_asideba_categoria_b">(15)</b> </p>
-            </div>
-        </div>
-           
+            <div class="asidebar_logo"><img class="asidebar_logo_zoom" src="./assets/img/logo-50.svg" alt="logo"/></div>
+            <nav class="nav flex-sm-column justify-content-end asidebar_menu">
+                <a class="nav-link" href="#">Consola</a>
+                <a class="nav-link" href="#">Juegos</a>
+                <a class="nav-link" href="#">Accesorios</a>
+              </nav>        
         </div>
         <section class="gridmain">
             <div class="gridmain_item_card">
@@ -55,13 +36,13 @@
                 <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
             </div>
             <div class="gridmain_item_card">
-                <img class="gridmain_item_card_img" src="./assets/img/play5.jpeg" alt="Play5"/>
+                <img class="gridmain_item_card_img" src="./assets/img/play5_color.jpeg" alt="Play5"/>
                 <p class="gridmain_item_card_texto_producto">Play Station 5</p> 
                 <p class="gridmain_item_card_texto_precio">$600.000</p>
                 <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
             </div>
             <div class="gridmain_item_card">
-                <img class="gridmain_item_card_img" src="./assets/img/switch.jpeg" alt="swith/>
+                <img class="gridmain_item_card_img" src="./assets/img/switch.jpeg" alt="swith"/>
                 <p class="gridmain_item_card_texto_producto">Nintendo Swith</p> 
                 <p class="gridmain_item_card_texto_precio">$400.000</p>
                 <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
@@ -78,15 +59,16 @@
                 <p class="gridmain_item_card_texto_precio">$200.000</p>
                 <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
             </div>
-
         </section>
-
-
         <div class="footer">
-            <p>Todos los derechos reservados PlayShop@2023</p>
+            <div class="footer_social">
+                <i class="fa-brands fa-facebook fa-xl"></i>
+                <i class="fa-brands fa-instagram fa-xl"></i>
+                <i class="fa-solid fa-envelope"></i>
+            </div>
+            <div class="footer_text">Todos los derechos reservados</div>
         </div>
-
     </div>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
 </body>
 </html>
