Fix imagen color

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <section class="gridmain">
             <div class="gridmain_item_card">
-                <img class="gridmain_item_card_img" src="./assets/img/xboxx.jpeg" alt="Xbox X"/>
+                <img class="gridmain_item_card_img" src="./assets/img/xboxx_color.jpeg" alt="Xbox X"/>
                 <p class="gridmain_item_card_texto_producto">Xbox serie X</p> 
                 <p class="gridmain_item_card_texto_precio">$500.000</p>
                 <input class="gridmain_item_card_texto_boton" type="button" value="Comprar" >                    
@@ -69,6 +69,6 @@
             <div class="footer_text">Todos los derechos reservados</div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
+  
 </body>
 </html>
